<resources>
    <string name="app_name">ECO</string>
    <string name="app_name_cn">工程泛联客</string>

    <!--global-->
    <string name="logining">正在登录...</string>
    <string name="loading">正在加载...</string>

    <!--welcome activity-->
    <string name="act_welcome_start">开始使用</string>

    <!--login activity-->
    <string name="act_login_forgetpassword">忘记密码</string>
    <string name="act_login_register">注册</string>
    <string name="act_login_login">登录</string>
    <string name="act_login_quick">快速体验</string>
    <string name="act_login_hint_username">请输入手机号</string>
    <string name="act_login_hint_password">请输入密码</string>

    <!--home activity-->
    <string name="act_home_profile">个人设置</string>
    <string name="act_home_client_info">客户信息一览</string>
    <string name="act_home_linkman_info">联系人信息</string>
    <string name="act_home_project_info">项目一览</string>
    <string name="act_home_check_info">签到信息</string>
    <string name="act_home_feedback_info">信息反馈</string>
    <string name="act_home_communication">工作交流</string>
    <string name="act_home_notice">企业公告</string>
    <string name="act_home_setting">系统设置</string>

    <!--context title-->
    <string name="client_context_title">客户信息</string>
    <string name="linkman_context_title">联系人信息</string>
    <string name="project_context_title">项目详情</string>
    <string name="check_context_title">签到信息</string>
    <string name="proback_context_title">项目反馈</string>
    <string name="notice_context_title">公告详情</string>
    <string name="knowledge_context_title">知识库信息</string>
    <string name="proleave_context_title">请假信息</string>


    <string name="act_home_bottom_1">我的消息</string>
    <string name="act_home_bottom_2">当前项目</string>
    <string name="act_home_bottom_3">只是共享</string>

    <!--Error message-->
    <string name="view_reload">点击屏幕,重新加载</string>

    <!--context page-->
    <string name="btn_edit_photo">编辑头像</string>
    <string name="btn_exit_app">退出当前账号</string>
    <string name="btn_delete_count">删除账号(仅限体验账号)</string>

    <!--fields name-->
    <string name="field_company_name">企 业</string>
    <string name="field_department_name">部 门</string>
    <string name="field_user_name">姓 名</string>
    <string name="field_user_sex">性 别</string>
    <string name="field_user_phone">手 机</string>

    <!--search hint-->
    <string name="search_hint_client">请输入客户名称</string>
    <string name="search_hint_linkman">请输入联系人名称</string>
    <string name="search_hint_proinfo">请输入项目名称</string>
    <string name="search_hint_proback">请输入反馈主题</string>
    <string name="search_hint_knowledge">请输入知识库文件名称</string>
    <string name="search_hint_announce">请输入公告主题</string>
</resources>
