<?xml version="1.0" encoding="utf-8"?>
<com.joint.turman.customwidget.view.InputMethodRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/act_login_baseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/act_login_background"
    >
    <LinearLayout
        android:id="@+id/act_login_scrollAreaLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/act_login_face"
            android:layout_width="@dimen/image_bigger_size"
            android:layout_height="@dimen/image_bigger_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_30"
            android:src="@drawable/logo"
            android:scaleType="centerCrop"
            android:clickable="false"
            android:contentDescription="@null"/>

        <RelativeLayout
            android:id="@+id/act_login_inputAreaLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" >

            <RelativeLayout
                android:id="@+id/act_login_inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_15"
                android:layout_marginRight="@dimen/space_15"
                android:layout_marginTop="@dimen/space_6"
                android:background="@drawable/login_input" >

                <com.joint.turman.customwidget.textview.ClearableEditText
                    android:id="@+id/act_login_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_45"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/act_login_hint_username"
                    android:inputType="text"
                    android:paddingLeft="@dimen/space_16"
                    android:paddingRight="@dimen/space_12"
                    android:singleLine="true"
                    style="@style/TextViewBase.EditText"
                    android:textSize="@dimen/space_16" />

                <View
                    android:id="@+id/act_login_line1"
                    android:layout_width="match_parent"
                    android:layout_height="1.0px"
                    android:layout_below="@+id/act_login_phone"
                    android:layout_marginLeft="1.0px"
                    android:layout_marginRight="1.0px"
                    android:background="#ffcacdd1" />

                <com.joint.turman.customwidget.textview.ClearableEditText
                    android:id="@+id/act_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_45"
                    android:layout_below="@+id/act_login_line1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/act_login_hint_password"
                    android:imeActionLabel="@string/act_login_login"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/space_16"
                    android:paddingRight="@dimen/space_12"
                    style="@style/TextViewBase.EditText"
                    android:textSize="@dimen/space_16" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/act_login_btns_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignLeft="@+id/act_login_inputs"
                android:layout_alignRight="@+id/act_login_inputs"
                android:layout_below="@+id/act_login_inputs"
                android:layout_marginTop="@dimen/space_20"
                android:padding="@dimen/space_1" >

                <Button
                    android:id="@+id/act_login_btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_40"
                    android:background="@drawable/btn_dark_blue_selector"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/act_login_login"
                    android:textSize="@dimen/text_size_18" />

                <Button
                    android:id="@+id/act_login_btn_loginQuick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_5"
                    android:background="@null"
                    android:gravity="center"
                    android:textColor="@color/gray"
                    android:text="@string/act_login_quick"
                    android:textSize="@dimen/text_size_14" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/act_login_bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginRight="@dimen/space_15"
        android:layout_marginBottom="@dimen/space_5" >

        <Button
            android:id="@+id/btn_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="left|center"
            android:text="@string/act_login_forgetpassword"
            android:textColor="#ff007aff"
            android:textSize="16.0sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_blue_block_selector"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="30.0dip"
            android:minWidth="47.0dip"
            android:text="@string/act_login_register"
            android:textAppearance="?android:textAppearanceSmallInverse"
            android:textColor="@color/blue"
            android:textSize="15.0dip" />

    </RelativeLayout>
</com.joint.turman.customwidget.view.InputMethodRelativeLayout>